@@ -45,7 +45,7 @@ public class SecurityConfig {
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration ccfg = new CorsConfiguration();
         ccfg.setAllowedOrigins(Arrays.asList("https://mytryfrontend-490397e0f41d.herokuapp.com"));
-        ccfg.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PUT", "OPTIONS", "PATCH", "DELETE"));
+        ccfg.setAllowedMethods(Arrays.asList("*"));
         ccfg.setAllowedHeaders(Arrays.asList("*"));
         ccfg.setExposedHeaders(Arrays.asList("*"));
         ccfg.setAllowCredentials(true);
